--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,27 @@
-Hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bambulab Firmware Updater</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Raleway', sans-serif;
+        }
+    </style>
+</head>
+<body class="bg-gray-100 flex items-center justify-center min-h-screen">
+    <div class="text-center">
+        <h1 class="text-2xl font-semibold mb-4">Bambulab Firmware Updater</h1>
+        <a href="./update.html" class="bg-green-500 text-white py-2 px-6 rounded text-xl" style="background-color: #3AB54A;">
+            Start
+        </a>
+        <div class="text-gray-600 mt-4">
+            <p>Bambulab Firmware Updating tool for domestic (CN) printers</p>
+            <p>Inspired from <a href="https://cafe.naver.com/bambulab/3353" class="text-blue-500">Halwin</a></p>
+        </div>
+    </div>
+</body>
+</html>
