--- a/public/update.html
+++ b/public/update.html
@@ -66,7 +66,7 @@
         let pingInterval;
 
         const checkProxy = () => {
-            const ws = new WebSocket('ws://localhost:1883/ws');
+            const ws = new WebSocket('ws://0.0.0.0:1883/ws');
             ws.onopen = function() {
                 ws.send('ping');
             };
@@ -95,7 +95,7 @@
             const accessCode = document.getElementById('access-code').value;
             const payload = document.getElementById('payload').value;
 
-            const ws = new WebSocket('ws://localhost:1883/ws');
+            const ws = new WebSocket('ws://0.0.0.0:1883/ws');
 
             ws.onopen = function() {
                 const consoleDiv = document.getElementById('console');
