--- a/public/update.html
+++ b/public/update.html
@@ -66,23 +66,20 @@
         let pingInterval;
 
         const checkProxy = () => {
-            const ws = new WebSocket('ws://0.0.0.0:1883/ws');
-            ws.onopen = function() {
-                ws.send('ping');
-            };
-            ws.onmessage = function(event) {
-                if (event.data === 'pong') {
-                    const modal = document.getElementById('modal');
-                    if (modal) {
-                        modal.remove();
+            fetch('http://127.0.0.1:1883/ping')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.message === 'pong') {
+                        const modal = document.getElementById('modal');
+                        if (modal) {
+                            modal.remove();
+                        }
+                        clearInterval(pingInterval);
                     }
-                    clearInterval(pingInterval);
-                }
-                ws.close();
-            };
-            ws.onerror = function() {
-                ws.close();
-            };
+                })
+                .catch(error => {
+                    console.log('Proxy not running:', error);
+                });
         };
 
         document.addEventListener('DOMContentLoaded', (event) => {
@@ -95,49 +92,37 @@
             const accessCode = document.getElementById('access-code').value;
             const payload = document.getElementById('payload').value;
 
-            const ws = new WebSocket('ws://0.0.0.0:1883/ws');
-
-            ws.onopen = function() {
+            fetch('http://127.0.0.1:1883/update', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ printerIp, sn, accessCode, payload })
+            })
+            .then(response => response.json())
+            .then(data => {
                 const consoleDiv = document.getElementById('console');
-                consoleDiv.innerHTML += 'WebSocket connection established<br>';
-                const data = JSON.stringify({ printerIp, sn, accessCode, payload });
-                ws.send(data);
-            };
-
-            ws.onmessage = function(event) {
+                consoleDiv.innerHTML += `Response: ${JSON.stringify(data)}<br>`;
+            })
+            .catch(error => {
                 const consoleDiv = document.getElementById('console');
-                try {
-                    const response = JSON.parse(event.data);
-                    consoleDiv.innerHTML += `Response: ${JSON.stringify(response)}<br>`;
-                } catch (e) {
-                    consoleDiv.innerHTML += `Received: ${event.data}<br>`;
-                }
-            };
-
-            ws.onerror = function(error) {
-                const consoleDiv = document.getElementById('console');
-                consoleDiv.innerHTML += `WebSocket error: ${error.message}<br>`;
-            };
+                consoleDiv.innerHTML += `Error: ${error}<br>`;
+            });
         });
 
         document.getElementById('terminate-button').addEventListener('click', function() {
-            const ws = new WebSocket('ws://0.0.0.0:1883/ws');
-
-            ws.onopen = function() {
+            fetch('http://127.0.0.1:1883/terminate', {
+                method: 'POST'
+            })
+            .then(response => response.json())
+            .then(data => {
                 const consoleDiv = document.getElementById('console');
-                consoleDiv.innerHTML += 'Sending terminate signal to proxy<br>';
-                ws.send('terminate');
-            };
-
-            ws.onmessage = function(event) {
+                consoleDiv.innerHTML += `Response: ${JSON.stringify(data)}<br>`;
+            })
+            .catch(error => {
                 const consoleDiv = document.getElementById('console');
-                consoleDiv.innerHTML += `Received: ${event.data}<br>`;
-            };
-
-            ws.onerror = function(error) {
-                const consoleDiv = document.getElementById('console');
-                consoleDiv.innerHTML += `WebSocket error: ${error.message}<br>`;
-            };
+                consoleDiv.innerHTML += `Error: ${error}<br>`;
+            });
         });
     </script>
 </body>
