--- a/public/update.html
+++ b/public/update.html
@@ -84,6 +84,12 @@
 
         document.addEventListener('DOMContentLoaded', (event) => {
             pingInterval = setInterval(checkProxy, 500);
+
+            const eventSource = new EventSource('http://127.0.0.1:1883/stream');
+            eventSource.onmessage = function(event) {
+                const consoleDiv = document.getElementById('console');
+                consoleDiv.innerHTML += `Received: ${event.data}<br>`;
+            };
         });
 
         document.getElementById('update-button').addEventListener('click', function() {
