--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="text-gray-600 mt-4">
             <p>Bambulab Firmware Updating tool for domestic (CN) printers</p>
             <p>Inspired by <a href="https://cafe.naver.com/bambulab/3353" class="text-blue-500">Halwin</a></p>
-            <p>&copy; <a href="https://github.com/yeorinhieut" class="text-blue-500">yeorinhieut</a></p>
+            <p>Made by <a href="https://github.com/yeorinhieut" class="text-blue-500">yeorinhieut</a></p>
         </div>
     </div>
 </body>
