--- a/public/update.html
+++ b/public/update.html
@@ -58,7 +58,7 @@
 
     <div id="modal" class="fixed inset-0 bg-black bg-opacity-50">
         <div class="bg-white p-5 rounded shadow-md text-center max-w-sm mx-auto text-smaller">
-            <p class="text-base font-semibold">Please download and run <a href="./proxy.exe" class="text-green-500">proxy.exe</a></p>
+            <p class="text-base font-semibold">Please download and run <a href="./bambu-proxy.zip" class="text-green-500">proxy</a></p>
         </div>
     </div>
 
