--- a/public/update.html
+++ b/public/update.html
@@ -13,6 +13,12 @@
         .text-smaller {
             font-size: 0.875rem;
         }
+        .code-block {
+            font-size: 0.75rem;
+            line-height: 1.2;
+            white-space: pre-wrap;
+            word-break: break-all;
+        }
         #modal {
             display: flex;
             position: fixed;
@@ -81,11 +87,10 @@
                     <li>Navigate to the download directory</li>
                     <li>Run the following commands:</li>
                 </ol>
-                <pre class="bg-gray-100 p-2 rounded mb-2">
-xattr -d com.apple.quarantine bambu-updater-macos-x86  # Remove quarantine
-chmod +x ./bambu-updater-macos-x86  # Add execute permission
-./bambu-updater-macos-x86  # Run the proxy
-                </pre>
+                <pre class="bg-gray-100 p-2 rounded mb-2 code-block">
+xattr -d com.apple.quarantine bambu-updater-macos-x86
+chmod +x ./bambu-updater-macos-x86
+./bambu-updater-macos-x86</pre>
                 <p class="mb-4">Note: Replace "x86" with "arm" if you're using an ARM-based Mac.</p>
             </div>
             <button id="downloadBtn" class="bg-green-500 text-white py-2 px-4 rounded w-full">Download Proxy</button>
